scode/GirlsPower/prob13/error.txt
main.c: In function 'main':
main.c:8:17: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
    8 |         scanf("%s",&b);
      |                ~^  ~~
      |                 |  |
      |                 |  char (*)[20]
      |                 char *
main.c:9:28: error: expected expression before '==' token
    9 |         while ( isdigit(b))==0){
      |                            ^~
main.c:9:31: error: expected statement before ')' token
    9 |         while ( isdigit(b))==0){
      |                               ^
main.c:11:21: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   11 |             scanf("%s",&b);
      |                    ~^  ~~
      |                     |  |
      |                     |  char (*)[20]
      |                     char *
main.c:14:17: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   14 |         scanf("%s",&n);
      |                ~^  ~~
      |                 |  |
      |                 |  char (*)[20]
      |                 char *
main.c:17:21: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   17 |             scanf("%s",&n);
      |                    ~^  ~~
      |                     |  |
      |                     |  char (*)[20]
      |                     char *
main.c:20:24: warning: passing argument 1 of 'atof' from incompatible pointer type [-Wincompatible-pointer-types]
   20 |         for(i=0;i<atof(&n);i++,printf("\n");){
      |                        ^~
      |                        |
      |                        char (*)[20]
In file included from main.c:2:
/usr/include/stdlib.h:101:33: note: expected 'const char *' but argument is of type 'char (*)[20]'
  101 | extern double atof (const char *__nptr)
      |                     ~~~~~~~~~~~~^~~~~~
main.c:20:44: error: expected ')' before ';' token
   20 |         for(i=0;i<atof(&n);i++,printf("\n");){
      |            ~                               ^
      |                                            )
main.c:21:21: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   21 |             scanf("%s",&pi);
      |                    ~^  ~~~
      |                     |  |
      |                     |  char (*)[20]
      |                     char *
main.c:24:24: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   24 |                scanf("%s",&pi);
      |                       ~^  ~~~
      |                        |  |
      |                        |  char (*)[20]
      |                        char *
main.c:27:21: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   27 |             scanf("%s",&ri);
      |                    ~^  ~~~
      |                     |  |
      |                     |  char (*)[20]
      |                     char *
main.c:30:24: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[20]' [-Wformat=]
   30 |                scanf("%s",&ri);
      |                       ~^  ~~~
      |                        |  |
      |                        |  char (*)[20]
      |                        char *
main.c:35:27: warning: passing argument 1 of 'atof' from incompatible pointer type [-Wincompatible-pointer-types]
   35 |             while(s<=atof(&b))
      |                           ^~
      |                           |
      |                           char (*)[20]
In file included from main.c:2:
/usr/include/stdlib.h:101:33: note: expected 'const char *' but argument is of type 'char (*)[20]'
  101 | extern double atof (const char *__nptr)
      |                     ~~~~~~~~~~~~^~~~~~
main.c:36:9: error: expected expression before '}' token
   36 |         }
      |         ^
